Added more states in states lable

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           <option value="Jharkhand">Jharkhand</option>
           <option value="Rajasthan">Rajasthan</option>
           <option value="UttarPradesh">UttarPradesh</option>
+          <option value="TamilNadu">TamilNadu</option>
         </select>
         <i class="fas fa-check-circle"></i>
         <i class="fas fa-exclamation-circle"></i>
