--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <option value="Bihar">Bihar</option>
           <option value="Jharkhand">Jharkhand</option>
           <option value="Rajasthan">Rajasthan</option>
-          <option value="Telangana">TamilNadu</option>
+          <option value="Telangana">Telangana</option>
           <option value="TamilNadu">TamilNadu</option>
           <option value="UttarPradesh">UttarPradesh</option>
         </select>
